<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ /*
  ~  * Created by Andrey Sevastianov on 05.08.20 0:04
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  * Last modified 13.07.20 20:46
  ~  */
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        tools:ignore="AppCompatResource"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_create_save"
        android:title="@string/action_create_save"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_history"
        android:title="@string/action_history"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        android:actionProviderClass="android.widget.ShareActionProvider"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_sign_up"
        android:title="Sign up"
        android:orderInCategory="4"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_help"
        android:title="@string/help"
        android:orderInCategory="5"
        app:showAsAction="ifRoom"

        />
</menu>
